Fix block timestamp alignment

--- a/src/app/common/block-timestamp/block-timestamp.component.scss
+++ b/src/app/common/block-timestamp/block-timestamp.component.scss
@@ -1,6 +1,9 @@
 .timestamp-container {
     display: flex;
     flex-direction: column;
+}
+
+.timestamp-container.right {
     align-items: flex-end;
 }
 
